# data-engineering-on-gcp

./: rong.txt
01-introduction-to-data-engineering/: dogs.json  extract.py  load.sh
my-project/: pyproject.toml
proj-sales-prediction/: main.py  pipeline.conf  pyproject.toml
