[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["phrommate <155867081+phrommate@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
